<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:background="@drawable/flat_button_beige">
    <!--android:background="#fcfced-->

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/intro_movechooser"
            android:textColor="#6c6c6c"
            android:id="@+id/txtvIntro"/>
    <Button android:layout_width="fill_parent"
            android:layout_margin="16dp"
            android:text="@string/action_wholebin"
            android:id="@+id/bnMoveChooserWholeBin"
            android:background="@drawable/button_purpple"
            android:layout_gravity="center"
            style="@style/ButtonTextSmall"
            android:drawableLeft="@drawable/appbarlayoutcollapseright"/>
    <Button android:layout_width="fill_parent"
            android:layout_margin="16dp"
            android:text="@string/action_bin"
            android:id="@+id/bnMoveChooserMany"
            android:background="@drawable/button_green"
            android:layout_gravity="center"
            style="@style/ButtonTextSmall"
            android:drawableLeft="@drawable/appbarsocialstackoverflow"/>
    <Button android:layout_width="fill_parent"
            android:layout_margin="16dp"
            android:text="@string/action_exit"
            android:id="@+id/bnExitActMoveChooser"
            android:background="@drawable/button_red"
            android:layout_gravity="center"
            style="@style/ButtonText"
            android:drawableLeft="@drawable/appbarpower"/>
    <!--android:width="190dp"-->
    <!--android:height="40dp"-->
</LinearLayout>