<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
        android:background="@drawable/flat_button_sandrift">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:padding="@dimen/activity_horizontal_margin"
                  android:background="@drawable/button_beige"
                  android:id="@+id/lytReplenScan">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/intro_Description"
                android:id="@+id/txtvReplenScanIntro"
                android:textColor="#ffffff"/>
        <Button android:layout_width="fill_parent"
                android:layout_marginBottom="20dp"
                android:text="@string/but_start"
                android:id="@+id/bnReplenScanPerformScan"
                android:background="@drawable/button_green"
                android:layout_gravity="center"
                style="@style/ButtonText"
                android:drawableLeft="@drawable/appbarbarcode"/>

        <Button android:layout_width="fill_parent"
                android:layout_marginTop="20dp"
                android:text="@string/action_exit"
                android:id="@+id/bnExitActReplenScan"
                android:background="@drawable/button_red"
                android:layout_gravity="center"
                style="@style/ButtonText"
                android:drawableLeft="@drawable/appbarpower"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_BinCode"
                android:id="@+id/txtvReplenScanBin"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:hint="@string/hint_bincode"
                    android:textColorHint="#c6c6c6"
                    android:gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:inputType="textCapCharacters"
                    android:capitalize="characters"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:background="@null"
                    android:id="@+id/etxtReplenScanBinCode"/>
            <Button android:text="ByHand"
                    android:background="@drawable/button_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/ButtonTextTiny"
                    android:drawableLeft="@drawable/appbarcursorhand"
                    android:id="@+id/bnEnterBinReplenScan"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>